feat(app): lookup API
